--- a/css/estilo.css
+++ b/css/estilo.css
@@ -14,7 +14,6 @@ header, #principal, #second, #contato, #stream {
   justify-content: center;
   align-items: center;
   gap: 50px;
-
 }
 
 .link-menu {
@@ -118,17 +117,17 @@ main #principal{
   flex-direction: column;
   display:flex;
   flex:1;
-  gap:50px;
+  gap: 45px;
   width: 700px;
 }
 
 #sec_ctd p{
-  display: flex;
+  display: inline-block;
   text-align: justify;
   line-height: 1.3;
   width: 460px;
   padding:10px;
-
+  margin-bottom: 40px;
 }
 
 #second a {
@@ -141,10 +140,6 @@ main #principal{
 
 .capa{
   max-width: 200px;
-}
-
-#contato{
-
 }
 
 #email a {
@@ -167,14 +162,54 @@ main #principal{
   padding:100px;
 }
 
-#second{
+#descricao {
+  margin: 100px 0;
+  padding: 40px;
+  border: 1px solid black;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  color: black;
 
 }
 
 #acesso{
-
+  padding: 30px 60px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  text-align: center;
+  font-size: 20px;
+  font-family: "Amatic SC"; 
 }
 
-#sinopse{
+#acesso a{
+  background-color: transparent;
+}
 
+#acesso a:hover{
+  text-decoration: underline;
+}
+
+#descricao ol{
+  padding-left: 40px;
+}
+
+#second div#descricao {
+  padding-right: 300px;
+}
+
+#descricao ol ul{
+  padding-left: 30px;
+}
+
+#descricao ol ol{
+  padding-left: 30px;
+}
+
+#acesso a img{
+  width: 40px;
+  margin: 15px;
+}
+
+b{
+  margin-top: 20px;
+  display: block;
 }
