--- a/css/estilo.css
+++ b/css/estilo.css
@@ -165,14 +165,14 @@ main #principal{
 #descricao {
   margin: 100px 0;
   padding: 40px;
-  border: 1px solid black;
+  border: 1.5px solid black;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   color: black;
 
 }
 
 #acesso{
-  padding: 30px 60px;
+  padding: 40px 70px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   text-align: center;
@@ -182,6 +182,7 @@ main #principal{
 
 #acesso a{
   background-color: transparent;
+  text-decoration: none;
 }
 
 #acesso a:hover{
